fix footer alignment

--- a/index.css
+++ b/index.css
@@ -22,12 +22,12 @@
     color: rgb(64,64,64);
    /* text-decoration: none;
     float: left;
+    position:relative;
     text-align: center;
     padding: 5px;
     margin: auto;
     text-decoration: none;
     text-align: center */
-    position:relative;
     display:inline-block;
     padding:0 16px;
     font-size: 30px;
@@ -48,7 +48,7 @@ nav.home-navigation {
     align-items: center;
     flex-wrap: wrap;
     z-index: 1;
-    margin-top: 100px;
+    margin-top: 10 0px;
     
 
 }
@@ -108,10 +108,10 @@ nav.home-navigation a:link {
 
 footer {
     font-size:25px;
-    width:500px;
+    /* width:500px;
     height: 30px;
     margin-top: 70px;
-    margin-left: 690px;
+    margin-left: 690px; */
     padding: 10px;
     text-align: center;
     flex: left;
@@ -122,8 +122,8 @@ footer span {
     position:relative;
     display:inline-block;
     margin: 10px;
-    padding: 10px;
     text-align: center;
+    padding: 10px; 
     border: 1px solid black;
 
 }
